[gd_scene load_steps=13 format=3 uid="uid://drs1m43trlfqt"]

[ext_resource type="Script" uid="uid://d0m12hvnmgk2k" path="res://Scripts/Classes/DoorChoice.gd" id="1_ebt7q"]
[ext_resource type="Texture2D" uid="uid://cto702ujeclyt" path="res://Assets/Art/Doors/chamber.png" id="2_eprex"]
[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="3_4y0vn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w1er0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebt7q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gk32r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_745mm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_akj78"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gedud"]

[sub_resource type="Animation" id="Animation_4y0vn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btnPickDoor:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("picDoor:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_eprex"]
resource_name = "show_door"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btnPickDoor:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("picDoor:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1er0"]
_data = {
&"RESET": SubResource("Animation_4y0vn"),
&"show_door": SubResource("Animation_eprex")
}

[node name="DoorChoice" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ebt7q")

[node name="picDoor" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
offset_right = 180.0
offset_bottom = 216.0
texture = ExtResource("2_eprex")
expand_mode = 5

[node name="btnPickDoor" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 44.0
offset_right = 167.0
offset_bottom = 248.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_w1er0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ebt7q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gk32r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_745mm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_akj78")
disabled = true

[node name="tooltipPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -112.0
offset_top = 250.0
offset_right = 357.0
offset_bottom = 398.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_gedud")

[node name="PanelContainer" type="PanelContainer" parent="tooltipPanel"]
layout_mode = 1
offset_right = 444.0
offset_bottom = 68.0
theme = ExtResource("3_4y0vn")

[node name="MarginContainer" type="MarginContainer" parent="tooltipPanel/PanelContainer"]
layout_mode = 2
theme = ExtResource("3_4y0vn")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="tooltipPanel/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="lblName" type="Label" parent="tooltipPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hallway Door"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtDesc" type="RichTextLabel" parent="tooltipPanel/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
text = "This is a description of what goes inside this door. And it is multi line. so it can me any number of different things.

1. Goblins
2. Treasures
3. Campfires"
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w1er0")
}

[connection signal="mouse_entered" from="btnPickDoor" to="." method="_on_btn_pick_door_mouse_entered"]
[connection signal="mouse_exited" from="btnPickDoor" to="." method="_on_btn_pick_door_mouse_exited"]
[connection signal="pressed" from="btnPickDoor" to="." method="_on_btn_pick_door_pressed"]
